# claude-code-sandbox-bot

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: acceptance-test-generator.md  code-reviewer.md  code-verifier.md  design-sync.md  document-reviewer.md  integration-test-reviewer.md  quality-fixer-frontend.md  quality-fixer.md  task-decomposer.md  task-executor-frontend.md  task-executor.md  technical-designer-frontend.md  technical-designer.md  work-planner.md
.claude/commands/: front-build.md  project-inject.md  refine-skill.md  sync-skills.md
.claude/skills/coding-standards/: SKILL.md
.claude/skills/frontend/python-rules/: SKILL.md
.claude/skills/frontend/python-testing/: SKILL.md
.claude/skills/project-context/: SKILL.md
.claude/skills/python-rules/: SKILL.md
.claude/skills/python-testing/: SKILL.md
.claude/skills/task-analyzer/references/: skills-index.yaml
.claude/skills/technical-spec/: SKILL.md
.github/workflows/: ci.yml
docs/design/: claude-code-sandbox-bot-design.md
docs/guides/: quickstart.md  rule-editing-guide.md  use-cases.md
sandbox/: Dockerfile
sandbox/.claude/: CLAUDE.md  settings.json
sandbox/tools/: ask_user.py
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/redis/: __init__.py  client.py
src/sandbox/: __init__.py  aci.py
src/slack/: __init__.py  app.py  handlers.py  question_handler.py  result_formatter.py
src/task/: __init__.py  concurrency.py  manager.py  models.py  progress.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_concurrency.py  test_e2e_journeys.py  test_human_in_loop.py  test_result_handling.py  test_sandbox.py  test_slack_bot.py
tests/unit/: __init__.py  test_models.py  test_settings.py
tests/unit/redis/: __init__.py  test_client.py
tests/unit/sandbox/: __init__.py  test_aci.py
tests/unit/slack/: __init__.py  test_app.py  test_handlers.py  test_question_handler.py  test_result_formatter.py
tests/unit/task/: __init__.py  test_concurrency.py  test_manager.py  test_progress.py
